# k8s_observebility

./: .envrc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile.build  Makefile  POC_SUMMARY.md  PRODUCTION_CHECKLIST.md  README.md  build-scripts.ps1  deploy.ps1  kind-config.yaml  kubeconfig  opentelemetry-metrics-service.yaml  otel operator for k8s.md  prometheus-cr.yaml  troubleshooting_guide.md
.claude/: settings.json
.claude/agents/: exporters.md  grafana.md  istio.md  jaeger.md  loki.md  otel.md  traefik.md  victoriametrics.md
.claude/hooks/: post-edit-yamllint.sh  pre-commit.md  pre-commit.sh  pre-push.md  pre-push.sh
.claude/rules/: docs-and-specs.md  helm-charts.md  python-tooling.md
.claude/skills/: deploy.md  kind-cluster.md  python-setup.md  stack-status.md  validate.md  verify-otel.md
.claude/specs/: architecture.md  design_doc.md  (+1 more)
argocd-apps/: applicationset.yaml  clickhouse-app.yaml  crds-poc-app.yaml  grafana-app.yaml  jaeger-app.yaml  kustomization.yaml  observability-ingress.yaml  opentelemetry-collector-app.yaml  opentelemetry-servicemonitor.yaml  opentelemetry-values.yaml  prometheus-app.yaml  prometheus-crds-app.yaml  prometheus-crds-values.yaml  prometheus-stack-app.yaml  prometheus-stack-poc.yaml  prometheus-stack-values.yaml  root-app.yaml  traefik-app.yaml  traefik-dashboard-service.yaml
docs/: promql.md
scripts/: install-crds-production.sh
src-build/: Cargo.toml
src-build/scripts/: cleanup.rs  deploy_argocd.rs  deploy_observability_stack.rs  deploy_sample_apps.rs  k8s_obs.rs  setup_kind_cluster.rs
(+165 files in other folders)
