[package]
name = "k8s-observability"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "setup_kind_cluster"
path = "scripts/setup_kind_cluster.rs"

[[bin]]
name = "deploy_argocd"
path = "scripts/deploy_argocd.rs"

[[bin]]
name = "deploy_sample_apps"
path = "scripts/deploy_sample_apps.rs"

[[bin]]
name = "cleanup"
path = "scripts/cleanup.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
indicatif = "0.17"
tempfile = "3.0" 